<resources>
    <string name="app_name">TFP101 01 Bowen2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watame">watame</string>
    <string name="test">test</string>
    <string name="HomePage">HomePage</string>
    <string name="Hololive">Hololive</string>
    <string name="MemberSearch">MemberSearch</string>
    <string name="textOpen">Open</string>
    <string name="textClose">Close</string>
    <string name="textDrawer">Menu</string>
    <string name="textSearch">Search</string>
    <string name="textTwitter">Twitter</string>
    <string name="textMessageBoard">MessageBoard</string>
    <string name="textEmpty">Empty</string>
    <string name="textGood">Good</string>
    <string name="textDialog">Dialog</string>
    <string name="textDate">Date</string>
    <string name="textTime">Time</string>
    <string name="textDelete">Delete</string>
    <string name="textDeleteTitle">Delete</string>
    <string name="textDeleteMessage">DeleteDateTime?</string>
    <string name="textYes">Yes</string>
    <string name="textNo">No</string>
    <string name="textExit">Exit</string>
    <string name="textAppLink">AppLink</string>
    <string name="textPhoneBook">PhoneBook</string>
    <string name="textCall">Call</string>
    <string name="textDataAccess">DataAccess</string>
    <string name="textSave">Save</string>
    <string name="textLoad">Load</string>
    <string name="textMultimedia">Multimedia</string>
    <string name="textCamera">Camera</string>
    <string name="textAlbum">Album</string>
    <string name="textVolumeUp">+++</string>
    <string name="textVolumeDown">---</string>
    <string name="textVolumeOff">OFF</string>
    <string name="textSound">Sound</string>
    <string name="textPlay">Play</string>
    <string name="textGoogleMap">GoogleMap</string>
    <string name="textSensor">Sensor</string>
    <string name="textValues">Values</string>
    <string name="textCancel">Cancel</string>
    <string name="textSend">Send</string>
    <string name="textNotification">Notification</string>
    <string name="textService">Service</string>
    <string name="textPlaySound">PlaySound</string>
    <string name="textStopSound">StopSound</string>
    <string name="textAlarmManager">AlarmManager</string>
    <string name="textJobScheduler">JobScheduler</string>
    <string name="textAdMob">AdMob</string>
    <string name="textBroadcast">Broadcast</string>
    <string name="textAlarmSet">AlarmSet</string>
    <string name="textAlarmDelete">AlarmDelete</string>
    <string name="textPositioning">Positioning</string>
</resources>