<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultimediaFragment" >

    <ImageView
        android:id="@+id/imageViewCamera"
        android:layout_width="190dp"
        android:layout_height="191dp"
        android:background="@color/main_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textCamera"
        app:layout_constraintStart_toEndOf="@+id/imageViewCamera"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAlbum"
        app:layout_constraintStart_toEndOf="@+id/imageViewCamera"
        app:layout_constraintTop_toBottomOf="@+id/buttonCamera" />

    <Button
        android:id="@+id/buttonVolumeUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textVolumeUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonVolumeDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textVolumeDown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonVolumeUp" />

    <Button
        android:id="@+id/buttonVolumeOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textVolumeOff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonVolumeDown" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:background="@color/main_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCamera">

        <TextView
            android:id="@+id/textViewSound"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/textSound"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSound"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/textPlay" />

            <Button
                android:id="@+id/buttonMedia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="Media" />

            <Button
                android:id="@+id/buttonInterentMedia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="Interent" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>